src/test/ui/issues/issue-48838.stderr
error[E0308]: mismatched types
  --> $DIR/issue-48838.rs:2:14
   |
LL |     Square = |x| x,
   |              ^^^^^ expected isize, found closure
   |
   = note: expected type `[closure@$DIR/issue-48838.rs:2:14: 2:19]`
              found type `isize`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
